[tool.poetry]
name = "desafio-back"
version = "0.1.0"
description = ""
authors = ["Breno Cavalcanti <bmmuc@cin.ufpe.br>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
gremlinpython = "3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
